tests/errors/semantic/blocking/SET_INCOMPATIBLE_TYPES_1.py
# Can't create an inhomogeneous set
# pylint: disable=missing-function-docstring, missing-module-docstring

l = {1, 4.6, 9j}
